--- a/e4a8fe452bda3514e14d63649577755cf3b626e2/scss/styles.scss
+++ b/e4a8fe452bda3514e14d63649577755cf3b626e2/scss/styles.scss
@@ -1,14 +1,8 @@
 /*!
-    Title: Dev Portfolio Template
-    Version: 1.2.0
-    Last Change: 05/20/17
-    Author: Ryan Fitzgerald
-    Repo: https://github.com/RyanFitzgerald/devportfolio-template
-    Issues: https://github.com/RyanFitzgerald/devportfolio-template/issues
-
-    Description: This file contains all the styles associated with the page
-    that don't come from third party libraries. This file gets compiled using
-    Gulp and send to the /css folder which is then loaded on the page.
+    
+    Author: Avanish Kumar
+    
+    
 */
 /*
     File Contents:
@@ -351,6 +345,8 @@ footer {
     min-height: 500px;
     max-height: 1080px;
     background: url(../images/lead-bg.jpg);
+    background-position: center;
+    background-attachment: fixed;
     background-size: cover;
     padding: 15px;
     overflow: hidden;
